Made few improvements / additions will document later